# LexFlow

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: lexflow-ci.yml  lexflow-release.yml  release-all.yml  release.yml  test-dispatch.yml
agents/: package-lock.json  package.json
agents/src/: definitions.ts  orchestrator.ts  run-agent.ts  run-all.ts
ci/: README-security-testing.md  attack_vault_format.py  check_binary_leaks.sh
cli/: lexflow-cli.rs
client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  ErrorBoundary.jsx  index.css  main.jsx  tauri-api.js  theme.js
docs/: README.typ  TYPST_MIGRATION_PLAN.md  guida-utente.typ  release-notes-v2.typ  security-whitepaper.typ
lexflow-crypto/: Cargo.toml
lexflow-crypto/src/: lib.rs  vault_v4.rs  vault_v4_tests.rs
scripts/: .lexflow-issued-keys 2.enc  .lexflow-registry-20260313_231624.bak.enc  generate-icons.py  generate_license_v2.py  inject-signing.py  setup-typst.sh  sign-apk.py  upload-artifacts.py
src-tauri/: Cargo.toml  Info.plist  build.rs  deny.toml  entitlements.mac.plist  tauri.android.conf.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: dmg-icon.icns  icon.icns  tray-icon.rgba
src-tauri/src/: audit.rs  backup.rs  bio.rs  constants.rs  crypto.rs  csv_export.rs  doc_tools.rs  error.rs  files.rs  import_export.rs  io.rs  lib.rs  license.rs  lockout.rs  notifications.rs  platform.rs  search.rs  security.rs  settings.rs  setup.rs  (+8 more)
(+44 files in other folders)
