[package]
name = "lexflow-crypto"
version = "0.1.0"
edition = "2021"
description = "Pure cryptographic engine for LexFlow — no Tauri dependency"

[dependencies]
aes-gcm-siv = "0.11"
aes-gcm = "0.10"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
zstd = "0.13"
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
